[tool.poetry]
name = "stateful-server"
version = "0.1.0"
description = ""
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio-dgram = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
mypy = "^0.812"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)5s %(name)s: %(message)s"
markers = ["realtime"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
